--- a/src/more/manifest.json
+++ b/src/more/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Special — полезные новости в удобном формате",
+  "name": "Special — полезное медиа в удобном формате",
   "lang": "ru",
   "start_url": "/",
   "display": "browser",
   "orientation": "any",
   "background_color": "white",
-  "description": "Special — полезные новости в удобном формате",
+  "description": "Special — полезное медиа в удобном формате",
   "icon": {
     "src": "/img/logo/ico.ico",
     "sizes": "256x256",
